--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-node_modules/
+# always ignore :)
 .DS_Store
-.env
+/node_modules
+
+# environments
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# next.js build output
+.next
+
+# project specific ignores
+.cache
+
+# misc
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
